WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95138
[BlackBerry] UpdateViewport uses wrong size for frameView
https://bugs.webkit.org/show_bug.cgi?id=95138
Summary
[BlackBerry] UpdateViewport uses wrong size for frameView
Andy Chen
Reported
2012-08-27 15:30:12 PDT
It uses screen size instead of actual visible size. It causes frame rect always larger than the actual visible one and ends up with find-on-page does not scroll correctly sometimes.
Attachments
Patch
(1.85 KB, patch)
2012-08-27 15:50 PDT
,
Andy Chen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Chen
Comment 1
2012-08-27 15:50:25 PDT
Created
attachment 160835
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-28 06:02:29 PDT
Comment on
attachment 160835
[details]
Patch Clearing flags on attachment: 160835 Committed
r126871
: <
http://trac.webkit.org/changeset/126871
>
WebKit Review Bot
Comment 3
2012-08-28 06:02:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug