[BlackBerry] UpdateViewport uses wrong size for frameView https://bugs.webkit.org/show_bug.cgi?id=95138

Patch by Andy Chen <andchen@rim.com> on 2012-08-28
Reviewed by Antonio Gomes.
Internally reviewed by Jakob Petsovits.

Use actual visible size instead of screen size when updating viewport size,
otherwise, frameView size would be too big.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::updateViewportSize):

Canonical link: https://commits.webkit.org/113048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126871 268f45cc-cd09-0410-ab3c-d52691b4dbfc